--- a/src/Layout/components/Header/Header.module.scss
+++ b/src/Layout/components/Header/Header.module.scss
@@ -3,11 +3,14 @@
   --spinner-space: 9px;
   --search-height: 46px;
   --search-btn-width: 52px;
+
+  position: fixed;
   box-shadow: 0px 1px 1px rgb(0 0 0/12%);
   height: var(--default-layout-header-height, 60px);
   width: 100%;
   display: flex;
   justify-content: center;
+  background-color: var(--white);
 }
 
 .inner {
